# agentpost

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  PRIOR_ART_EVALUATION.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  llms.txt  pyproject.toml
.github/workflows/: test.yml
docs/: COMPATIBILITY.md  FOUNDER_ACCEPTANCE_CHECKLIST.md  INSTALL.md  MIGRATION.md  PROTOCOL.md  PYTHON.md  PYTHON_AGENT_QUICKSTART.md  RELEASING.md  TWO_AGENT_QUICKSTART.md
integrations/antigravity/: hooks.json  plugin.json
integrations/claude/.claude-plugin/: marketplace.json
integrations/claude/agentpost/.claude-plugin/: plugin.json
integrations/claude/agentpost/hooks/: hooks.json
integrations/claude/agentpost/monitors/: monitors.json
integrations/claude/agentpost/skills/agentpost/: SKILL.md
integrations/codex/.agents/plugins/: marketplace.json
integrations/codex/plugins/agentpost/.codex-plugin/: plugin.json
integrations/codex/plugins/agentpost/hooks/: hooks.json
integrations/codex/plugins/agentpost/skills/agentpost/: SKILL.md
integrations/shared/agentpost/: SKILL.md
scripts/: install.sh  render_integrations.py  smoke_two_agents.sh  verify_clean_install.py
specs/: CODEX-CATCHUP-GENERATION-V1.md
src/agentpost/: __init__.py  adapters.py  channel.py  cli.py  codex_generation.py  codex_lock.py  core.py  installer.py  native.py  ownership.py  panels.py  presence.py  review.py  routing.py  runtime.py
src/agentpost/data/: codex_bridge.mjs  integrations.json
tests/: test_acceptance.py  test_adapters.py  test_channel.py  test_cli.py  test_core.py  test_examples.py  test_panels.py  test_review.py  test_routing.py  test_runtime.py
