[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpost"
version = "0.0.3"
description = "A trusted-local filesystem post office for CLI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/5000Stadia/agentpost"
Documentation = "https://github.com/5000Stadia/agentpost#readme"
Issues = "https://github.com/5000Stadia/agentpost/issues"

[project.scripts]
agentpost = "agentpost.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentpost = ["data/*.mjs", "data/*.json"]
