[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpost"
version = "1.1.0"
description = "Durable trusted-local messaging and token-free notifications for CLI and Python agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
keywords = ["agents", "claude-code", "codex", "local-first", "messaging"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/5000Stadia/agentpost"
Documentation = "https://github.com/5000Stadia/agentpost#readme"
Issues = "https://github.com/5000Stadia/agentpost/issues"
Changelog = "https://github.com/5000Stadia/agentpost/blob/main/CHANGELOG.md"
Security = "https://github.com/5000Stadia/agentpost/security/policy"

[project.scripts]
agentpost = "agentpost.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentpost = ["data/*.mjs", "data/*.json"]
